完成资讯主题

--- a/view/admin/admin/edit_account.html
+++ b/view/admin/admin/edit_account.html
@@ -115,7 +115,7 @@
 
                 var uploadSiteLogo = croppers.render({
                     elem: '.upload-admin-avatar',
-                    url: '{:url("api/Files/save")}',
+                    url: '{:url("File/save")}',
                     data: {
                         type: 2,
                         dir: 'admin_avatar'
