--- a/view/admin/category/create.html
+++ b/view/admin/category/create.html
@@ -112,7 +112,7 @@
 
       upload.render({
         elem: '.upload-title-img',
-        url: '{:url("api/Files/save")}',
+        url: '{:url("File/save")}',
         data: {
           type: 4,
           dir: 'article'
