--- a/view/admin/post/edit.html
+++ b/view/admin/post/edit.html
@@ -305,7 +305,7 @@
 
       upload.render({
         elem: '.ql-image',
-        url: '{:url("api/Files/save")}',
+        url: '{:url("File/save")}',
         data: {
           type: 4,
           dir: 'article'
@@ -322,7 +322,7 @@
       })
       upload.render({
         elem: '.upload-poster',
-        url: '{:url("api/Files/save")}',
+        url: '{:url("File/save")}',
         data: {
           type: 4,
           dir: 'article'
