--- a/view/admin/system/agreement.html
+++ b/view/admin/system/agreement.html
@@ -150,7 +150,7 @@
 
             var uploadSiteLogo = upload.render({
                 elem: '.ql-image',
-                url: '{:url("api/Files/save")}',
+                url: '{:url("File/save")}',
                 data: {
                     type: 4,
                     dir: 'article'
