--- a/view/admin/system/index.html
+++ b/view/admin/system/index.html
@@ -181,7 +181,7 @@
 
         var uploadSiteLogo = upload.render({
           elem: '.upload-site-logo',
-          url: '{:url("api/Files/save")}',
+          url: '{:url("File/save")}',
           data: {
             type: 1,
             dir: 'site_logo'
@@ -199,7 +199,7 @@
         })
         var uploadSiteLogo = upload.render({
           elem: '.upload-site-qrcode',
-          url: '{:url("api/Files/save")}',
+          url: '{:url("File/save")}',
           data: {
             type: 1,
             dir: 'site_logo'
@@ -217,7 +217,7 @@
         })
         var uploadSiteLogo = upload.render({
           elem: '.upload-site-fovicon',
-          url: '{:url("api/Files/save")}',
+          url: '{:url("File/save")}',
           data: {
             type: 1,
             dir: 'site_logo'
