--- a/view/admin/nav/edit.html
+++ b/view/admin/nav/edit.html
@@ -153,7 +153,7 @@
 
         var uploadTitleImg = upload.render({
           elem: '.upload',
-          url: '{:url("api/Files/save")}',
+          url: '{:url("File/save")}',
           data: {
             type: 6,
             dir: 'nav'
