--- a/view/admin/post/create.html
+++ b/view/admin/post/create.html
@@ -298,7 +298,7 @@
 
       upload.render({
         elem: '.ql-image',
-        url: '{:url("api/Files/save")}',
+        url: '{:url("File/save")}',
         data: {
           type: 4,
           dir: 'article'
@@ -315,7 +315,7 @@
       })
       upload.render({
         elem: '.upload-poster',
-        url: '{:url("api/Files/save")}',
+        url: '{:url("File/save")}',
         data: {
           type: 4,
           dir: 'article'
