--- a/view/admin/user/create.html
+++ b/view/admin/user/create.html
@@ -97,7 +97,7 @@
 
                 var uploadSiteLogo = croppers.render({
                     elem: '.upload-admin-avatar',
-                    url: '{:url("api/Files/save")}',
+                    url: '{:url("File/save")}',
                     data: {
                         type: 3,
                         dir: 'user_avatar'
