--- a/view/index/index/articles_index.html
+++ b/view/index/index/articles_index.html
@@ -13,62 +13,71 @@
     <div class="layui-row layui-col-space4">
       {include file='common/_articles_left'/}
       <div class="layui-col-md7">
-        {eq name='$Request.param.category_id|default="0"' value='0'}
+        <div class="main-container">
 
-        <div>
-          <div class="layui-carousel" id="banner">
-            <div carousel-item>
-              {volist name='list_nav_slide' id='nav'}
+          {eq name='$Request.param.category_id|default="0"' value='0'}
 
-              <a href="{$nav.value|default='javascript:;'}" target="{$nav.target}">
-                <img src="{$nav.img}">
-                <div class="panel">
-                  <p class="title">{$nav.title}</p>
-                  <p>{$nav.desc}</p>
-                </div>
-              </a>
-              {/volist}
+          <div style="">
+            <div class="layui-carousel" id="banner">
+              <div carousel-item>
+                {volist name='list_nav_slide' id='nav'}
 
-            </div>
-          </div>
-        </div>
-        {/eq}
-
-        {notempty name='$sub_category'}
-        <div class="tab-list">
-          <a href="{:url('Index/index',['category_id'=>$Request.param.category_id])}" {eq name='$Request.param.sub_category_id|default=0' value='0'} class="current" {/eq}>全部</a>
-          {volist name='$sub_category' id='category'}
-            
-          <a href="{:url('Index/index',['category_id'=>$Request.param.category_id,'sub_category_id'=>$category.id])}" {eq name='$Request.param.sub_category_id|default=0' value='$category.id'} class="current" {else/}{/eq}>{$category.title}</a>
-          {/volist}
-        </div>
-        {/notempty}
-        <div class="post-container">
-          <div class="post-list">
-            {volist name='list_post' id='post'}
-              
-            <a href="{:url('Post/read',['id'=>$post.id])}" class="post-item" onmouseover="$(this).find('.poster').addClass('layui-anim-scale')" onmouseout="$(this).find('.poster').removeClass('layui-anim-scale')" >
-              {notempty name='$post->getData("poster")'}
-                
-              <div class="poster layui-anim" style="background-image: url('{$post.poster}');"></div>
-              {/notempty}
-
-              <div class="info">
-                <div class="title">{$post.title}</div>
-                <div class="plus-info">
-                  <span>{$post.hits}访问</span>
-                  <span>{$post.comment_count}评论</span>
-                </div>
-
+                <a href="{$nav.value|default='javascript:;'}" target="{$nav.target}">
+                  <img src="{$nav.img}">
+                  <div class="panel">
+                    <p class="title">{$nav.title}</p>
+                    <p>{$nav.desc}</p>
+                  </div>
+                </a>
+                {/volist}
 
               </div>
-                
-            </a>
+            </div>
+          </div>
+          {/eq}
+
+          {notempty name='$sub_category'}
+          <div class="tab-list">
+            <a href="{:url('Index/index',['category_id'=>$Request.param.category_id])}" {eq
+              name='$Request.param.sub_category_id|default=0' value='0' } class="current" {/eq}>全部</a>
+            {volist name='$sub_category' id='category'}
+
+            <a href="{:url('Index/index',['category_id'=>$Request.param.category_id,'sub_category_id'=>$category.id])}"
+              {eq name='$Request.param.sub_category_id|default=0' value='$category.id' } class="current"
+              {else/}{/eq}>{$category.title}</a>
             {/volist}
-            {empty name='list_post'}
-              
+          </div>
+          {/notempty}
+          
+          <div class="post-container">
+            <div class="post-list">
+              {volist name='list_post' id='post'}
+
+              <a href="{:url('Post/read',['id'=>$post.id])}" class="post-item"
+                onmouseover="$(this).find('.poster').addClass('layui-anim-scale')"
+                onmouseout="$(this).find('.poster').removeClass('layui-anim-scale')">
+                {notempty name='$post->getData("poster")'}
+
+                <div class="poster layui-anim" style="background-image: url('{$post.poster}');"></div>
+                {/notempty}
+
+                <div class="info">
+                  <div class="title">{$post.title}</div>
+                  <div class="plus-info">
+                    <span>{$post.hits}访问</span>
+                    <span>{$post.comment_count}评论</span>
+                  </div>
+
+
+                </div>
+
+              </a>
+              {/volist}
+              {empty name='list_post'}
+
               <img class="nodata" src="/static/images/nodata.png" alt="">
-            {/empty}
+              {/empty}
+            </div>
           </div>
         </div>
       </div>
