--- a/view/admin/common/left_system.html
+++ b/view/admin/common/left_system.html
@@ -52,6 +52,21 @@
       </li>
     </ul>
     {/if}
+    {if get_system_config('index_tpl_name') == 'documents_' }
+      
+    <ul class="layui-nav layui-nav-tree" lay-filter="test">
+      <li class="layui-nav-item layui-nav-itemed">
+        <a class="" href="javascript:;">文档中心</a>
+        <dl class="layui-nav-child">
+
+          <dd class="left-nav-item" data-name="pc-nav-6">
+            <a href="{:url('Nav/index',['type'=>9,'show_img'=>0,'show_target'=>1])}">首页目录</a>
+          </dd>
+
+        </dl>
+      </li>
+    </ul>
+    {/if}
 
     <ul class="layui-nav layui-nav-tree" lay-filter="test">
       <li class="layui-nav-item layui-nav-itemed">
