--- a/view/admin/system/theme.html
+++ b/view/admin/system/theme.html
@@ -48,12 +48,12 @@
                                             <div>
                                                 <input type="radio" name="index_tpl_name" value="articles_" title="资讯头条主题-'articles_'">
                                             </div>
-                                            <!-- <div>
+                                            <div>
                                                 <input type="radio" name="index_tpl_name" value="documents_" title="文档主题-'documents_'">
                                             </div>
                                             <div>
                                                 <input type="radio" name="index_tpl_name" value="blog_" title="博客主题-'blog_'">
-                                            </div> -->
+                                            </div>
                                         </div>
                                     </div>
                                     
