--- a/public/static/css/index.documents.css
+++ b/public/static/css/index.documents.css
@@ -1,6 +1,7 @@
 html,
 body {
     background-color: #f5f5f5;
+    
 }
 
 .program-item {
@@ -26,4 +27,49 @@ body {
 
 .program-item .layui-icon{
     font-size: 14px;
+}
+
+.site-logo{
+  display: flex;
+  align-items: center;
+  color: #fff;
+}
+.site-logo:hover{
+  color: #fff;
+}
+
+.site-logo img{
+  max-height: 60px;
+}
+
+.read-header{
+  background-color: #6699CC;
+  color: #fff;
+}
+
+.read-header .layui-breadcrumb a:hover{
+  color: #99CCFF !important;
+}
+
+.read-header .layui-breadcrumb a{
+  color: #fff !important;
+}
+
+.main-body{
+
+}
+
+
+.list-container li{
+    list-style: unset;
+    margin-left: 15px;
+}
+
+.post-title{
+  margin: 15px 0;
+  font-size: 22px;
+}
+
+.post-container{
+  margin: 15px;
 }
