引入编辑器样式

--- a/view/index/post/documents_read.html
+++ b/view/index/post/documents_read.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>{$post.title}-{:get_system_config('site_name')}</title>
   {include file='common/_documents_require'/}
+  <link rel="stylesheet" href="/static/lib/quill/quill.snow.css">
 </head>
 
 <body>
