--- a/view/admin/tag/index.html
+++ b/view/admin/tag/index.html
@@ -52,7 +52,7 @@
                   <td> {:str_repeat('|--',$vo.level)} <span class="tag-name">{$vo.title}</span></td>
                   <td>
                     <div class="layui-btn-container">
-                      <div class="layui-btn layui-btn-sm edit" data-href="{:url('update',['id'=>$vo.id])}">编辑</div>
+                      <div class="layui-btn layui-btn-sm edit" data-href="{:url('update',['id'=>$vo.id,'type'=>$Request.param.type])}">编辑</div>
                       <div class="layui-btn layui-btn-sm delete">删除</div>
                     </div>
                   </td>
@@ -82,6 +82,7 @@
       layer.confirm('确定要删除吗？', function () {
         $.get('{:url("delete")}', {
           id: $(item).parents('.item').data('id')
+          
         }, function (result) {
           layer.msg('删除成功');
 
@@ -95,7 +96,8 @@
         title: '请输入标签,空格分隔可添加多个'
       }, function (value, index) {
         $.post('{:url("save")}', {
-          tags: value
+          tags: value,
+          type:'{$Request.param.type}'
         }, function (result) {
           layer.msg('添加成功')
           setTimeout(() => {
