--- a/view/admin/common/left_system.html
+++ b/view/admin/common/left_system.html
@@ -21,7 +21,7 @@
       
     <ul class="layui-nav layui-nav-tree" lay-filter="test">
       <li class="layui-nav-item layui-nav-itemed">
-        <a class="" href="javascript:;">简约蓝主题管理</a>
+        <a class="" href="javascript:;">简约蓝官网</a>
         <dl class="layui-nav-child">
 
           <dd class="left-nav-item" data-name="easy_blue"><a href="{:url('System/easyBlue')}">一般参数</a></dd>
@@ -32,6 +32,7 @@
           <dd class="left-nav-item" data-name="pc-nav-7">
             <a href="{:url('Nav/index',['type'=>7,'show_img'=>1,'show_target'=>1])}">首页布局块2</a>
           </dd>
+
 
         </dl>
       </li>
