--- a/view/admin/post/create.html
+++ b/view/admin/post/create.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="/static/lib/quill/quill.snow.css">
   <script src="/static/lib/quill/quill.min.js"></script>
   <script>
-    var currentHeaderNavItem = 'Post';
+    var currentHeaderNavItem = 'Post-{$Request.param.type|default="1"}';
     var currentLeftNavItem = 'post';
   </script>
 
