每个模板都有自己的头部导航,文章和分类

--- a/public/static/css/skin-1.css
+++ b/public/static/css/skin-1.css
@@ -23,7 +23,7 @@
 }
 
 .layui-layout-admin .layui-header{
-    background-color: #66CCFF;
+    background-color: #39BDFF;
 }
 
 .layui-nav {
@@ -138,7 +138,7 @@
 }
 
 .layui-nav .layui-nav-child dd.layui-this a, .layui-nav-child dd.layui-this{
-    background-color: #66CCFF;
+    background-color: #19B3FF;
 }
 
 .layui-nav-tree .layui-nav-bar{
