--- a/view/admin/category/edit.html
+++ b/view/admin/category/edit.html
@@ -10,7 +10,7 @@
 
   <script>
     var currentHeaderNavItem = 'Post-{$Request.param.type|default="1"}';
-    var currentLeftNavItem = 'category';
+    var currentLeftNavItem = 'category-{$Request.param.type|default="1"}';
   </script>
 </head>
 
