--- a/view/admin/category/create.html
+++ b/view/admin/category/create.html
@@ -10,7 +10,7 @@
 
   <script>
     var currentHeaderNavItem = 'Post-{$Request.param.type|default="1"}';
-    var currentLeftNavItem = 'category';
+    var currentLeftNavItem = 'category-{$Request.param.type|default="1"}';
   </script>
 </head>
 
@@ -36,6 +36,7 @@
               <legend>新增分类</legend>
               <div class="layui-field-box">
                 <form class="layui-form" action="{:url('save')}" method="post">
+                  <input type="hidden" name="type" value="{$Request.param.type}">
                   <div class="layui-form-item">
                     <div class="layui-form-label">分类名称</div>
                     <div class="layui-input-block">
