--- a/view/admin/post/index.html
+++ b/view/admin/post/index.html
@@ -10,7 +10,7 @@
 
   <script>
     var currentHeaderNavItem = 'Post-{$Request.param.type|default="1"}';
-    var currentLeftNavItem = 'post';
+    var currentLeftNavItem = 'post-{$Request.param.type|default="1"}';
   </script>
 </head>
 
