--- a/view/admin/common/_header.html
+++ b/view/admin/common/_header.html
@@ -4,7 +4,9 @@
     <ul class="layui-nav layui-layout-left layui-hide-xs pc-nav-container">
         <li class="layui-nav-item header-nav-item" data-name="Index" ><a href="{:url('admin/Index/index')}">首页</a></li>
         <li class="layui-nav-item header-nav-item" data-name="User" ><a href="{:url('admin/User/index')}">用户管理</a></li>
+        {if check_permission('file_list') }
         <li class="layui-nav-item header-nav-item" data-name="File" ><a href="{:url('admin/File/index')}">文件管理</a></li>
+        {/if}
         <li class="layui-nav-item header-nav-item" data-name="Post-1" ><a href="{:url('admin/Post/index')}">内容管理</a></li>
         {if get_system_config('index_tpl_name') == 'easy_blue_' }
         <li class="layui-nav-item header-nav-item" data-name="Post-2" ><a href="{:url('admin/Post/index',['type'=>2])}">官网文章管理</a></li>
