完善系统问题

--- a/view/admin/common/_header.html
+++ b/view/admin/common/_header.html
@@ -1,5 +1,5 @@
 <div class="layui-header">
-    <a class="layui-logo" href="/">{:get_system_config('site_name')}</a>
+    <a class="layui-logo" href="{:url('index/Index/index')}" target="_blank">{:get_system_config('site_name')}</a>
     <!-- 头部区域（可配合layui已有的水平导航） PC端显示 -->
     <ul class="layui-nav layui-layout-left layui-hide-xs pc-nav-container">
         <li class="layui-nav-item header-nav-item" data-name="Index" ><a href="{:url('admin/Index/index')}">首页</a></li>
