--- a/view/admin/common/left_system.html
+++ b/view/admin/common/left_system.html
@@ -123,5 +123,11 @@
         </dl>
       </li>
     </ul>
+    <ul class="layui-nav layui-nav-tree" lay-filter="test">
+      
+      <li class="layui-nav-item layui-nav-itemed left-nav-item">
+        <a class="" href="{:url('admin/System/clearCache')}">清空缓存</a>
+      </li>
+    </ul>
   </div>
 </div>
