新增内容时间格式化

--- a/view/admin/post/edit.html
+++ b/view/admin/post/edit.html
@@ -144,7 +144,7 @@
                     <div class="layui-form-item">
                       <div class="layui-form-label">发表时间</div>
                       <div class="layui-input-block">
-                        <input type="text" name="publish_time" value="{$post->publish_time}"
+                        <input type="text" name="publish_time" value="{$post->publish_time_datetime}"
                           class="layui-input publish-time">
                       </div>
                     </div>
