--- a/view/admin/category/index.html
+++ b/view/admin/category/index.html
@@ -55,7 +55,7 @@
                   <td>
                     <div class="layui-btn-container">
                       <a class="layui-btn layui-btn-sm" href="{:url('index/Category/read',['id'=>$vo.id,'type'=>$Request.param.type])}">查看</a>
-                      <a class="layui-btn layui-btn-sm" href="{:url('edit',['id'=>$vo.id])}">编辑</a>
+                      <a class="layui-btn layui-btn-sm" href="{:url('edit',['id'=>$vo.id,'type'=>$Request.param.type])}">编辑</a>
                       <div class="layui-btn layui-btn-sm delete">删除</div>
                     </div>
                   </td>
